rendered/envs/friclu/isabellabot/deployment-fabric-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fabric
    component: backend
  name: fabric-backend
  namespace: isabellabot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric
      component: backend
  template:
    metadata:
      labels:
        app: fabric
        component: backend
    spec:
      containers:
        - env:
            - name: FABRIC_CONFIG_HOME
              value: /home/fabric/.config/fabric
            - name: OBSIDIAN_VAULT_PATH_1
              value: IsabellaSync/private
            - name: OBSIDIAN_VAULT_PATH_2
              value: IsabellaFritzShare
            - name: OBSIDIAN_BASE_PATH
              value: /home/fabric/sync
            - name: FABRIC_PATTERN_PATH
              value: /home/fabric/sync/IsabellaSync/patterns
            - name: PERSONAL_NAME
              value: Isabella
            - name: TELEGRAM_BOT_TOKEN
              value: <path:kv/data/shared/telegram#botToken>
            - name: JOURNAL_FILE_RETRO_MONTHS
              value: "3"
            - name: WEAVIATE_URL
              value: http://weaviate.weaviate
            - name: WEAVIATE_CERTAINTY
              value: "0.5"
            - name: WEAVIATE_CLASS
              value: ObsidianFile
          image: ghcr.io/fritzduchardt/fabric:main
          imagePullPolicy: Always
          name: fabric-backend
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /home/fabric/.config/fabric/.env
              name: fabric-env
              subPath: .env
            - mountPath: /home/fabric/sync
              name: sync
      nodeSelector:
        kubernetes.io/hostname: friclu-1
      volumes:
        - name: fabric-env
          secret:
            secretName: fabric
        - name: sync
          persistentVolumeClaim:
            claimName: sync
