rendered/envs/friclu/isabellabot/deployment-fabric-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fabric
    component: ui
  name: fabric-ui
  namespace: isabellabot
spec:
  replicas: null
  selector:
    matchLabels:
      app: fabric
      component: ui
  template:
    metadata:
      annotations:
        checksum/app-js: 9830c209b1ce2c23e146b3df6c691fa936feaec98c5dbfb6124146e5769666f3
        checksum/index-html: e6af7d4a6f4e7777478d69b6dcb088da99d93a389605fc9772c16040bc16db08
        checksum/lib-js: 92dfeefb147cd26fc2eb13e813dc2453b246381a898660a22f02f9507e1204a7
        checksum/service-worker-js: defaa6683c6f8b0a62de0b14b6528484344695f078aafc62685d3af6af4386bb
      labels:
        app: fabric
        component: ui
    spec:
      containers:
        - image: ghcr.io/fritzduchardt/fabric-ui:master
          imagePullPolicy: Always
          name: fabric-ui
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/share/nginx/html/app.js
              name: ui-scripts
              subPath: app.js
            - mountPath: /usr/share/nginx/html/lib.js
              name: ui-scripts
              subPath: lib.js
            - mountPath: /usr/share/nginx/html/index.html
              name: ui-scripts
              subPath: index.html
            - mountPath: /usr/share/nginx/html/manifest.json
              name: ui-scripts
              subPath: manifest.json
            - mountPath: /usr/share/nginx/html/service-worker.js
              name: ui-scripts
              subPath: service-worker.js
            - mountPath: /etc/nginx/nginx.conf
              name: ui-nginx-config
              subPath: nginx.conf
        - env:
            - name: SCRAPE_URI
              value: http://127.0.0.1:8080/status
          image: nginx/nginx-prometheus-exporter:latest
          imagePullPolicy: Always
          name: nginx-exporter
          ports:
            - containerPort: 9113
              name: metrics
      volumes:
        - configMap:
            defaultMode: 420
            name: fabric-ui-scripts
          name: ui-scripts
        - configMap:
            defaultMode: 420
            name: fabric-ui-nginx-config
          name: ui-nginx-config
