rendered/envs/friclu/isabellabot/deployment-finclaw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: finclaw
    app.kubernetes.io/name: oneshot
  name: finclaw
  namespace: isabellabot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: finclaw
      app.kubernetes.io/name: oneshot
  template:
    metadata:
      labels:
        app.kubernetes.io/component: finclaw
        app.kubernetes.io/name: oneshot
    spec:
      containers:
        - env:
            - name: LOG_LEVEL
              value: info
            - name: PORT
              value: "9000"
          image: ghcr.io/fritzduchardt/finclaw:main
          imagePullPolicy: Always
          name: finclaw
          ports:
            - containerPort: 9000
