rendered/envs/friclu/isabellabot/deployment-oneshot-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/name: oneshot
  name: oneshot-nginx
  namespace: isabellabot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: nginx
      app.kubernetes.io/name: oneshot
  template:
    metadata:
      labels:
        app.kubernetes.io/component: nginx
        app.kubernetes.io/name: oneshot
    spec:
      containers:
        - image: nginx:1.29
          imagePullPolicy: Always
          name: nginx
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
            - mountPath: /etc/nginx/auth/.htpasswd
              name: nginx-basic-auth
              subPath: auth
      volumes:
        - configMap:
            name: oneshot-nginx
          name: nginx-config
        - name: nginx-basic-auth
          secret:
            secretName: oneshot-ui-basic-auth
