rendered/envs/friclu/isabellabot/deployment-oneshot-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: oneshot-ui
    app.kubernetes.io/name: oneshot
  name: oneshot-ui
  namespace: isabellabot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: oneshot-ui
      app.kubernetes.io/name: oneshot
  template:
    metadata:
      labels:
        app.kubernetes.io/component: oneshot-ui
        app.kubernetes.io/name: oneshot
    spec:
      containers:
        - env:
            - name: API_URL
              value: https://isabellabot.duchardt.net/backend
            - name: PORT
              value: "3000"
          image: ghcr.io/fritzduchardt/oneshot-ui:main
          imagePullPolicy: Always
          name: oneshot-ui
          ports:
            - containerPort: 3000
