rendered/envs/friclu/isabellabot/service-fabric-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabric
    component: ui
  name: fabric-ui
  namespace: isabellabot
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9113
      targetPort: 9113
  selector:
    app: fabric
    component: ui
  type: ClusterIP
