rendered/envs/friclu/isabellabot/service-finclaw.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: finclaw
    app.kubernetes.io/name: oneshot
  name: finclaw
  namespace: isabellabot
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/component: finclaw
    app.kubernetes.io/name: oneshot
  type: ClusterIP
