rendered/envs/friclu/isabellabot/service-oneshot-mcp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: oneshot-mcp
    app.kubernetes.io/name: oneshot
  name: oneshot-mcp
  namespace: isabellabot
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/component: oneshot-mcp
    app.kubernetes.io/name: oneshot
  type: ClusterIP
