rendered/envs/friclu/isabellabot/service-oneshot-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/name: oneshot
  name: oneshot-nginx
  namespace: isabellabot
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/name: oneshot
  type: ClusterIP
