rendered/envs/friclu/isabellabot/service-oneshot.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: oneshot
    app.kubernetes.io/name: oneshot
  name: oneshot
  namespace: isabellabot
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/component: oneshot
    app.kubernetes.io/name: oneshot
  type: ClusterIP
