rendered/envs/friclu/isabellabot/ingress-fabric.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
  labels:
    app: fabric
  name: fabric
  namespace: isabellabot
spec:
  ingressClassName: nginx
  rules:
    - host: isabellabot.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: fabric-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - isabellabot.duckdns.org
      secretName: fabric-certificate
