rendered/envs/friclu/isabellabot/ingress-oneshot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-secret: oneshot-ui-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-cache: "off"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 300s
    nginx.ingress.kubernetes.io/proxy-keepalive-timeout: 300s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 300s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 300s
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/name: oneshot
  name: oneshot
  namespace: isabellabot
spec:
  ingressClassName: nginx
  rules:
    - host: fritzgpt.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: oneshot
                port:
                  name: http
            path: /backend/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: oneshot
                port:
                  name: http
            path: /image/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: oneshot-ui
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - fritzgpt.duchardt.net
      secretName: oneshot-certificate
